# ACE-bot

./: .gitignore  pyproject.toml
src/: db.py  filters.py  main.py  middlewares.py
src/core/: config.py  modules.py  routers.py
src/modules/publisher/: router.py  tasks.py
src/modules/uploader/: router.py  service.py
src/routes/: __init__.py  publisher.py
src/services/: __init__.py  publisher.py
src/tasks/: __init__.py  publisher.py
src/utils/: __init__.py  try_to_run.py
