[tool.poetry]
name = "auto-lecture-upload"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
envparse = "^0.2.0"
aiosqlite = "^0.20.0"
aioschedule = {git = "https://github.com/ibrb/python-aioschedule.git"}
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
